<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_box"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:contentDescription="@string/poster_movie"
        tools:src="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@id/img_photo"
        android:fontFamily="@font/comfortaa"
        android:textColor="@color/content"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/title_movie" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@id/img_photo"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/date_movie"
        android:textColor="@color/content"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:fontFamily="@font/comfortaa"
        android:maxLines="3"
        android:text="@string/description"
        android:textColor="@color/content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_description"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/detail_info"
        android:textColor="@color/content"
        android:textStyle="bold" />
</RelativeLayout>